--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -56,6 +56,21 @@ h6 {
     font-weight: inherit;
 }
 
-.main-wrapper {
-    //
+button {
+    background-color: var(--var-green);
+    outline: none;
+    border: none;
+    padding: 1rem 0.7rem;
+    cursor: pointer;
+}
+
+@media screen and (min-width: 500px) {
+    button {
+        transition: 150ms all ease-in-out;
+
+    &:hover {
+        background-color: var(--var-purple);
+        color: white;
+    }
+}
 }
