--- a/src/assets/scss/components/HomePage.scss
+++ b/src/assets/scss/components/HomePage.scss
@@ -7,7 +7,9 @@
     &__title {
         text-align: center;
         font-weight: 600;
+        padding-bottom: 2rem;
         margin-bottom: 2rem;
+        border-bottom: 1px solid var(--var-black);
     }
 
     &__paragraph {
