--- a/src/assets/scss/components/ProductPage.scss
+++ b/src/assets/scss/components/ProductPage.scss
@@ -19,8 +19,14 @@
         height: auto;
     }
 
+    &__title-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
     &__title {
         font-weight: 600;
-        margin-bottom: 0.2rem;
+        margin-bottom: 0.5rem;
     }
 }
