--- a/src/assets/scss/components/CartPage.scss
+++ b/src/assets/scss/components/CartPage.scss
@@ -16,6 +16,15 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        margin-bottom: 2rem;
+    }
+}
+
+.total-amount {
+    text-align: right;
+
+    &__title {
+        font-weight: 600;
     }
 }
 
@@ -26,9 +35,19 @@
     padding-left: 2rem;
     background-color: #f8f8f8;
 
+    &__description {
+        display: flex;
+        gap: 2rem;
+    }
+
     &__title {
         color: var(--var-green);
         font-weight: 600;
         font-size: 1.6rem;
+    }
+
+    &__buttons-wrapper {
+        display: flex;
+        gap: 0.5rem;
     }
 }
