--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,5 +1,5 @@
 :root {
-    --var-font-family: 'Adobe Garamod', sans-serif;
+    --var-font-family: 'Helvetica Neue', sans-serif;
     --var-max-width: 1200px;
 
     // Colors
